Update page title to remove recipe count

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script defer src="src/js/controller.js"></script>
 
-    <title>food-recipe // Search over 1,000,000 recipes</title>
+    <title>food-recipe // Search over recipes</title>
     <script type="text/javascript">
   var appInsights=window.appInsights||function(config){
     function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}
